<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflow_menu_item"
        android:icon="@drawable/ic_menu_moreoverflow"
        android:title=""
        app:showAsAction="always" />
</menu>