...
			android:id="@+id/action_search"
			android:enabled="true"
			android:icon="@drawable/ic_icon_search"
			android:title="@string/search"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/action_register"
			android:enabled="true"
			android:icon="@drawable/ic_icon_nav_new"
			android:title="@string/register"
			app:showAsAction="ifRoom"/>
	<item
			android:id="@+id/action_library"
...
