...

    <string name="new_registration_saved">New registration saved &#x21;</string>
    <string name="registration_info_updated">Registration info updated &#x21;</string>

    <string name="call">Call</string>
    <string name="start_contact">Start Contact</string>
    <string name="close_anc_record">Close ANC Record</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="no_matching_woman_found_on_this_device">No matching woman found on this device.</string>
    <string name="go_to_advanced_search">Go to advanced search</string>
    <string name="cancel">Cancel</string>
    <string name="yellow">YELLOW</string>
    <string name="red">RED</string>
...
