...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@id/ok_button"
            android:layout_toLeftOf="@id/ok_button"
            android:background="@null"
            android:text="@string/undo"
            android:textAllCaps="true"
            android:textColor="@color/dialog_button_blue_color"
            android:textStyle="bold" />
...
